# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
.github/workflows/: audit-on-push.yml  general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230118055117_create_subscriptions_table.sql  20230201184346_make_status_not_null_in_subscriptions.sql  20230201185111_create_subscriptions_tokens_table.sql  20230209210052_create_users_table.sql  20230210174527_remove_salt_form_users.sql  20230215234405_seed_user.sql  20230220202853_create_subscriptions_table.sql  20230220203035_make_status_not_null_in_subscriptions.sql  20230220203126_create_subscriptions_tokens_table.sql  20230220203227_create_users_table.sql  20230220203550_seed_user.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
