[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Jose Duarte <iam@joseduarte.io>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
urlencoding = "2"
argon2 = { version = "0.3", features = ["std"] }
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"
actix-web = "4"
config = { version = "0.13", default-features = false, features = ["yaml"] }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.2"
serde-aux = "4.1.2"
unicode-segmentation = "1.10.0"
validator = "0.16.0"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1.0.38"
actix-web-flash-messages = {version = "0.3", features = ["cookies"]}
anyhow = "1.0.69"
secrecy = { version = "0.8", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
base64 = "0.13.0"
htmlescape = "0.3.1"
hex = "0.4.3"

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
once_cell = "1.17.0"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"
linkify = "0.5.0"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    # tells sqlsx to use the actix runtime for its futures and rustls as TLS backend
    "runtime-actix-rustls",
    # gives us access to sqlx::query! and sqlx::query_as!
    "macros",
    # unlocks postgres-specific fucntionality
    "postgres",
    # uuid adds support for mapping SQL UUIDs to the Uuid type from the uuid crate. We need it to work with our
    # id column;
    "uuid",
    # adds support for mapping SQL timestapmtz to the DateTime<T> type from the chrono crate.
    # used here to work with our subscribed_at column;
    "chrono",
    # gives us acces to the same functions used under the hood by sqlx-cli to manage migrations.
    # it will turn out to be usedul for our test suite.
    "migrate",
    "offline",
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = [
    "json",
    "rustls-tls",
    "cookies"
]
